prototypes/primordial/testdata/bad_package_decl_no_semi.out
** Line 2, column 15: syntax error, unexpected end of file, expecting ;

FAIL

