prototypes/primordial/testdata/bad_package_decl_no_semi.p
# Expected: fail (missing semicolon)
package Example
